feat(core): updated deps and started working on base components

--- a/package.json
+++ b/package.json
@@ -21,32 +21,37 @@
     "not IE 11"
   ],
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.0",
+    "next-theme-kit": "0.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwind-merge": "2.2.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.31",
-    "@types/react-dom": "18.0.11",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
-    "@vitejs/plugin-react": "3.1.0",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.36.0",
-    "eslint-define-config": "1.17.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-react": "^7.32.2",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.78",
+    "@types/react-dom": "18.2.25",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
+    "@vitejs/plugin-react": "4.2.1",
+    "autoprefixer": "10.4.19",
+    "eslint": "9.0.0",
+    "eslint-define-config": "2.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.2.0",
-    "postcss": "8.4.21",
-    "prettier": "2.8.7",
-    "tailwindcss": "3.3.0",
-    "ts-node": "10.9.1",
-    "typescript": "5.0.2",
-    "vite": "4.2.1"
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "tailwindcss": "3.4.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.5",
+    "vite": "5.2.8"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
