feat(core): started working on expression input and page layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "strict": true,
     "baseUrl": "./src",
     "paths": {
-      "@styles": ["styles/*"]
+      "@styles/*": ["styles/*"],
+      "@modules/*": ["modules/*"]
     }
   },
   "exclude": ["node_modules"],
