--- a/.prettierrc
+++ b/.prettierrc
@@ -2,7 +2,7 @@
   "tabWidth": 2,
   "printWidth": 120,
   "singleQuote": true,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "semi": true,
   "endOfLine": "auto"
 }
