--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "next-theme-kit": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "2.2.2"
+    "tailwind-merge": "2.2.2",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
