--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "baseUrl": "./src",
     "paths": {
       "@styles/*": ["styles/*"],
-      "@modules/*": ["modules/*"]
+      "@components/*": ["components/*"],
+      "@hooks/*": ["hooks/*"]
     }
   },
   "exclude": ["node_modules"],
