feat(core): started working on characters and improved input

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
     "paths": {
       "@styles/*": ["styles/*"],
       "@components/*": ["components/*"],
-      "@hooks/*": ["hooks/*"]
+      "@hooks/*": ["hooks/*"],
+      "@lib/*": ["lib/*"],
+      "@types/*": ["lib/*"]
     }
   },
   "exclude": ["node_modules"],
