--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint --cache .",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test": "vitest",
+    "coverage": "vitest run --coverage"
   },
   "browserslist": [
     ">0.2%",
@@ -27,9 +29,7 @@
     "next-theme-kit": "0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "2.2.2",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-tsconfig-paths": "^4.3.2"
+    "tailwind-merge": "2.2.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
@@ -51,9 +51,12 @@
     "postcss": "8.4.38",
     "prettier": "3.2.5",
     "tailwindcss": "3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "ts-node": "10.9.2",
     "typescript": "5.4.5",
-    "vite": "5.2.8"
+    "vite": "5.2.8",
+    "vite-tsconfig-paths": "^4.3.2",
+    "vitest": "^1.5.0"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
